feat(gui): add JavaFX patients view and CRUD (add/edit/delete/search)